# youtube_db_data

./: README.md  pyproject.toml
src/: config.py  data.json  database.ini  main.py  utils.py
